--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -31,6 +31,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 50
+    - name: Validate rebase onto integration
+      if: "github.event_name == 'pull_request'"
+      run: .github/workflow-scripts/validate-rebase-integration.sh
     - name: Validate copyright headers
       if: "github.event_name == 'pull_request'"
       run: .github/workflow-scripts/validate-copyright-headers.sh
@@ -111,7 +114,9 @@ jobs:
           github.event.pull_request.state != 'closed'
         )"
     steps:
-    - uses: actions/checkout@v2 
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 50
     - name: Set up Java
       uses: joschi/setup-jdk@v2
       with:
