--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -31,9 +31,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 50
-    - name: Validate rebase onto integration
-      if: "github.event_name == 'pull_request'"
-      run: .github/workflow-scripts/validate-rebase-integration.sh
+    # - name: Validate rebase onto integration
+    #   if: "github.event_name == 'pull_request'"
+    #   run: .github/workflow-scripts/validate-rebase-integration.sh
     - name: Validate copyright headers
       if: "github.event_name == 'pull_request'"
       run: .github/workflow-scripts/validate-copyright-headers.sh
