--- a/dev/com.ibm.ws.wsat.recovery_fat.multi/.classpath
+++ b/dev/com.ibm.ws.wsat.recovery_fat.multi/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="fat/src"/>
 	<classpathentry kind="src" path="com.ibm.ws.wsat.recovery_fat.single-recoveryClient"/>
 	<classpathentry kind="src" path="com.ibm.ws.wsat.recovery_fat.single-recoveryServer"/>
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
