--- a/dev/io.openliberty.ws.global.handler.internal_fat/publish/servers/RSTestServer/bootstrap.properties
+++ b/dev/io.openliberty.ws.global.handler.internal_fat/publish/servers/RSTestServer/bootstrap.properties
@@ -1,1 +1,4 @@
 bootstrap.include=../testports.properties
+
+com.ibm.ws.logging.trace.specification=*=info:RESTfulWS=all:LogService=all
+com.ibm.ws.logging.max.file.size=0
