Misc updates for SAML Fats

--- a/dev/com.ibm.ws.security.saml.sso_fat.2/build.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.2/build.gradle
@@ -195,18 +195,6 @@ autoFVT.doLast {
     include '**/*.orig'
   }
   
-//  copy {
-//    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/envVars')
-//  	into new File(autoFvtDir, "publish/servers/${serverName}")
-//  	include 'jvm.options'
-//  }
-// 
-//  copy {
-//    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/policyFiles')
-//  	into new File(autoFvtDir, "publish/servers/${serverName}/policyFiles")
-//  	include '*'
-//  }
-  
   /*****************************************************************
    * Server: com.ibm.ws.security.saml.sso-2.0_fat.2.missingMetaData
    *****************************************************************/
@@ -328,12 +316,12 @@ autoFVT.doLast {
     from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
     into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
   }
-  // policyFileUpdates
-//  copy {
-//    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/envVars/jvm.options')
-//    into new File(autoFvtDir, "publish/servers/${serverName}")
-//  }
-//
+  // enable ldap trace
+  copy {
+    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/envVars/jvm.options')
+    into new File(autoFvtDir, "publish/servers/${serverName}")
+  }
+
 // The restricted policy files have been standard for a while now. They shouldn't be needed.
 //
 //  copy { 
