--- a/dev/com.ibm.ws.security.saml.sso_fat.3/.project
+++ b/dev/com.ibm.ws.security.saml.sso_fat.3/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>com.ibm.ws.security_fat.common</project>
+                <project>com.ibm.ws.security.saml.sso_fat.common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
