--- a/dev/com.ibm.ws.security.saml.sso_fat.common/.project
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/.project
@@ -3,6 +3,7 @@
 	<name>com.ibm.ws.security.saml.sso_fat.common</name>
 	<comment></comment>
 	<projects>
+                <project>com.ibm.ws.security_fat.common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
