--- a/dev/com.ibm.ws.security.saml.sso_fat/.project
+++ b/dev/com.ibm.ws.security.saml.sso_fat/.project
@@ -4,7 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>com.ibm.ws.security_fat.common</project>
-		<project>com.ibm.ws.security.saml.sso-2.0_fat.commonTest</project>
+		<project>com.ibm.ws.security.saml.sso_fat.common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
