update javax strings in restfulWs-3.0 to be jakarta

--- a/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-direct.properties
@@ -158,3 +158,14 @@ com.sun.xml.bind.v2.ContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFact
 com.ibm.xml.xlxp2.jaxb.JAXBContextFactory=org.glassfish.jaxb.runtime.v2.JAXBContextFactory
 
 javax.annotation.security.RolesAllowed=jakarta.annotation.security.RolesAllowed
+
+# restfulWS 3.0 properties
+javax.ejb.Singleton=jakarta.ejb.Singleton
+javax.ejb.Stateful=jakarta.ejb.Stateful
+javax.ejb.Stateless=jakarta.ejb.Stateless
+javax.servlet.FilterConfig=jakarta.servlet.FilterConfig
+javax.servlet.http=jakarta.servlet.http
+javax.servlet.ServletConfig=jakarta.servlet.ServletConfig
+javax.servlet.ServletContext=jakarta.servlet.ServletContext
+javax.ws.rs.Application=jakarta.ws.rs.Application
+javax.xml.bind.annotation.XmlEnum=jakarta.xml.bind.annotation.XmlEnum
