Rename WSAT FAT projects

--- a/dev/com.ibm.ws.wsat_fat.dbs_optional/.project
+++ b/dev/com.ibm.ws.wsat_fat.dbs_optional/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.ws.wsat_fat.4</name>
+	<name>com.ibm.ws.wsat_fat.dbs_optional</name>
 	<comment></comment>
 	<projects>
 	</projects>
