--- a/dev/com.ibm.ws.wsat_fat.ssl/.project
+++ b/dev/com.ibm.ws.wsat_fat.ssl/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.ws.wsat_fat.7</name>
+	<name>com.ibm.ws.wsat_fat.ssl</name>
 	<comment></comment>
 	<projects>
 	</projects>
