--- a/dev/com.ibm.ws.wsat_fat.assertion/.project
+++ b/dev/com.ibm.ws.wsat_fat.assertion/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.ws.wsat_fat.5</name>
+	<name>com.ibm.ws.wsat_fat.assertion</name>
 	<comment></comment>
 	<projects>
 	</projects>
