Issue #15713: HttpUnit 1.6.2 did not support JSSE providers beyond Oracle. Added support that was added in HttpUnit 1.7 to 1.6.2.

--- a/dev/com.ibm.ws.security.oauth_fat/build.gradle
+++ b/dev/com.ibm.ws.security.oauth_fat/build.gradle
@@ -33,7 +33,7 @@ dependencies {
   mongoJavaDriver 'org.mongodb:mongo-java-driver:2.13.3'
   
   requiredLibs    'jtidy:jtidy:4aug2000r7-dev',
-                  'httpunit:httpunit:1.6.2',     // 1.7 causes refresh token failures
+                  project(':com.ibm.ws.com.meterware.httpunit.1.6.2'),     // 1.7 causes refresh token failures
                   files('lib/jsse.jar'),
                   'rhino:js:1.6R5',
                   project(':com.ibm.ws.mongo_fat')
