Added missing JSTL taglib renames to properties and descriptions

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -73,6 +73,14 @@ full-config.xml=jakarta-faces-config.properties
 faces-config1.xml=jakarta-faces-config.properties
 com.ibm.ws.security.inflow.context.provider.xml=jakarta-connectors.properties
 com.ibm.ws.security.javaeesec.cdi.extensions.JavaEESecCDIExtension.xml=jakarta-xml-securityEnterprise.properties
+# JSTL
+x.tld=jakarta-renames.properties
+sql.tld=jakarta-renames.properties
+fmt.tld=jakarta-renames.properties
+c.tld=jakarta-renames.properties
+c-1_1.tld=jakarta-renames.properties
+Resources.properties=jakarta-renames.properties
+Resources_ja.properties=jakarta-renames.properties
 # jsonb FAT
 test.jsonb.bundle.ServiceThatRequiresJsonb.xml=jakarta-jsonProvider.properties
 test.jsonp.bundle.ServiceThatRequiresJsonp.xml=jakarta-jsonProvider.properties
