--- a/dev/io.openliberty.faces.3.0.thirdparty/.project
+++ b/dev/io.openliberty.faces.3.0.thirdparty/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.openliberty.thirdparty.faces-3.0</name>
+	<name>io.openliberty.faces.3.0.thirdparty</name>
 	<comment></comment>
 	<projects>
 	</projects>
