--- a/dev/com.ibm.ws.springboot.support.version23.test.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.support.version23.test.app/build.gradle
@@ -17,6 +17,16 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile 'org.webjars:bootstrap:3.3.1'
 	compile 'org.webjars:webjars-locator:0.33'
+	compile 'org.springframework:spring-core:5.2.6.RELEASE'
+	compile 'org.springframework:spring-context:5.2.6.RELEASE'
+	compile 'org.springframework:spring-beans:5.2.6.RELEASE'
+	compile 'org.springframework:spring-web:5.2.6.RELEASE'
+	compile 'org.springframework:spring-webmvc:5.2.6.RELEASE'
+	compile 'org.springframework.boot:spring-boot-autoconfigure:2.3.0.RELEASE'
+	compile 'org.springframework.boot:spring-boot:2.3.0.RELEASE'
+	compile 'org.springframework.security:spring-security-web:5.3.2.RELEASE'
+	compile 'org.springframework.security:spring-security-config:5.3.2.RELEASE'
+	compile 'org.springframework.security:spring-security-core:5.3.2.RELEASE'
 }
 
 bootJar {
