Jakarta and GitHub test run updates

--- a/dev/com.ibm.ws.security.saml.sso_fat.jaxrs.config/build.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.jaxrs.config/build.gradle
@@ -8,6 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+apply from: '../com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle'
 
 apply plugin: 'war'
 
@@ -59,290 +60,6 @@ dependencies {
 }
 
 addRequiredLibraries.dependsOn addJakartaTransformer
+addRequiredLibraries.dependsOn ':com.ibm.ws.security.saml.sso_fat.jaxrs:assemble'
+addRequiredLibraries.dependsOn copyApache, copyShibbolethServer, copySamlFatServer1, copySamlFatServer2
 
-
-
-/*
- * Configure any auto FVT artifacts.
- */
-autoFVT.dependsOn ':com.ibm.ws.security.saml.sso_fat.jaxrs:assemble'
-autoFVT.doLast {
-
-  /*
-   * Copy the local ApacheDS LDAP instances. 
-   */
-  copy {
-    from project(':com.ibm.ws.org.apache.directory.server').projectDir
-    into autoFvtDir
-    include 'apacheds-2.0.0-M15/**'
-  }
-  copy {
-    from project(':com.ibm.ws.security.saml.sso_fat.common').projectDir
-    into autoFvtDir
-    include 'securitykeys/**'
-  }
-  copy {
-    from project(':com.ibm.ws.security.saml.sso_fat.common').buildDir
-    into autoFvtDir
-    include 'shibboleth-idp/**'
-  }
-
-  /*****************************************************************
-   * Server: com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.sp
-   *****************************************************************/
-  def serverName = "com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.config.sp"
-  // updateTestServerFiles -->
-  // copySAMLTestAppFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/SAML_Demo.ear')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/samlclient.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.jaxrs').buildDir, 'test-application/jaxrsclient.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  // copyTestMarker
-  copy {
-    from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  // copySecurityKeysToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '*.arm'
-  }
-  copy {
-    from new File(projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '.arm'
-  }
-  // copySecurityDefaultFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*/idpMetadata.xml', '*/idpMetadata.xml.orig'
-  }
-  // copyCommonServerXmlFeatures
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**features*.xml'
-  }
-  // copyCommonServerXmlMisc
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**misc.xml'
-  }
-  copy {
-    from new File(project(':fattest.simplicity').projectDir, 'autoFVT-defaults')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include "**fatTestCommon.xml"
-  }
-  // copyCommonServerXmlRegistry
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**egistry*.xml'
-  }
-  // copyCommonServerXmlSSL
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**ssl*.xml', '**SSL*.xml'
-  }
-  // copyCommonServerXmlProvider
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**rovider*.xml', '**.base'
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  // copyCommonServerXmlApplications
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**Application*.xml'
-  }
-  // copyServerXmlParts
-  copy {
-    from new File(projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**.xml'
-    include '**.base'
-  }
-  copy {
-    from new File(projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  
-  copy {
-    from new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    into new File(autoFvtDir, 'lib/LibertyFATTestFiles/serversettings/SAMLServerFiles')
-    include '**/*.orig'
-  }
-
-
-  /*****************************************************************
-   * Server: com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.sp
-   *****************************************************************/
-  serverName = "com.ibm.ws.security.saml.sso-2.0_fat.jaxrs.config.rs"
-  // updateTestServerFiles -->
-  // copySAMLTestAppFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/SAML_Demo.ear')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/samlclient.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.jaxrs').buildDir, 'test-application/helloworld.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  // copyTestMarker
-  copy {
-    from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  // copySecurityKeysToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '*.arm'
-  }
-  copy {
-    from new File(projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '.arm'
-  }
-  // copySecurityDefaultFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*/idpMetadata.xml', '*/idpMetadata.xml.orig'
-  }
-  // copyCommonServerXmlFeatures
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**features*.xml'
-  }
-  // copyCommonServerXmlMisc
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**misc.xml'
-  }
-  copy {
-    from new File(project(':fattest.simplicity').projectDir, 'autoFVT-defaults')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include "**fatTestCommon.xml"
-  }
-  // copyCommonServerXmlRegistry
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**egistry*.xml'
-  }
-  // copyCommonServerXmlSSL
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**ssl*.xml', '**SSL*.xml'
-  }
-  // copyCommonServerXmlProvider
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**rovider*.xml', '**.base'
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  // copyCommonServerXmlApplications
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**Application*.xml'
-  }
-  // copyServerXmlParts
-  copy {
-    from new File(projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**.xml'
-    include '**.base'
-  }
-  copy {
-    from new File(projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  
-  copy {
-    from new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    into new File(autoFvtDir, 'lib/LibertyFATTestFiles/serversettings/SAMLServerFiles')
-    include '**/*.orig'
-  }
-
-
-  /*****************************************************************
-   * Server: com.ibm.ws.security.saml.sso-2.0_fat.shibboleth
-   *****************************************************************/
-  serverName = "com.ibm.ws.security.saml.sso-2.0_fat.shibboleth"
-  // updateShibbolethServerFiles -->
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, "publish/servers/${serverName}/configs")
-    into new File(autoFvtDir, "publish/servers/${serverName}/configs")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, "publish/servers/${serverName}/bootstrap.properties")
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-  }
-  // copyTestMarker
-  copy {
-    from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  // enable ldap trace
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/envVars/jvm.options')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-  }
-
-// The restricted policy files have been standard for a while now. They shouldn't be needed.
-//
-//  copy { 
-//    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/policyFiles')
-//    into new File(autoFvtDir, "publish/servers/${serverName}/policyFiles")
-//  }
-  // copyShibbolethTestAppFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  // copySecurityKeysToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include "*.jks", "*.arm"
-  }
-  copy {
-    from new File(projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include "*.jks", "*.arm"
-  }
-}
