--- a/dev/com.ibm.ws.security.saml.sso_fat.endpoint.samlmetadata/build.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.endpoint.samlmetadata/build.gradle
@@ -8,7 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
-
+apply from: '../com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle'
 
 repositories {
   if (isUsingArtifactory) {
@@ -54,119 +54,4 @@ dependencies {
 }
 
 addRequiredLibraries.dependsOn addJakartaTransformer
-
-
-/*
- * Configure any auto FVT artifacts.
- */
-autoFVT.dependsOn ':com.ibm.ws.security.saml.sso_fat.common:assemble'
-autoFVT.doLast {
-
-  copy {
-    from project(':com.ibm.ws.security.saml.sso_fat.common').projectDir
-    into autoFvtDir
-    include 'securitykeys/**'
-  }
-
-  /*****************************************************************
-   * Server: com.ibm.ws.security.saml.sso-2.0_fat.endpoint.samlmetadata
-   *****************************************************************/
-  def serverName = "com.ibm.ws.security.saml.sso-2.0_fat.endpoint.samlmetadata"
-  // updateTestServerFiles -->
-  // copySAMLTestAppFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/SAML_Demo.ear')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/samlclient.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-  }
-  // copyTestMarker
-  copy {
-    from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-    into new File(autoFvtDir, "publish/servers/${serverName}/dropins")
-  }
-  // copySecurityKeysToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '*.arm'
-  }
-  copy {
-    from new File(projectDir, 'securitykeys')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*.jks', '.arm'
-  }
-  // copySecurityDefaultFilesToServer
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}")
-    include '*/idpMetadata.xml', '*/idpMetadata.xml.orig'
-  }
-  // copyCommonServerXmlFeatures
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**features*.xml'
-  }
-  // copyCommonServerXmlMisc
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**misc.xml'
-  }
-  copy {
-    from new File(project(':fattest.simplicity').projectDir, 'autoFVT-defaults')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include "**fatTestCommon.xml"
-  }
-  // copyCommonServerXmlRegistry
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**egistry*.xml'
-  }
-  // copyCommonServerXmlSSL
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**ssl*.xml', '**SSL*.xml'
-  }
-  // copyCommonServerXmlProvider
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**rovider*.xml', '**.base'
-  }
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  // copyCommonServerXmlApplications
-  copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**Application*.xml'
-  }
-  // copyServerXmlParts
-  copy {
-    from new File(projectDir, 'publish/files/serversettings')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**.xml'
-    include '**.base'
-  }
-  copy {
-    from new File(projectDir, 'publish/files/serversettings/SAMLServerFiles')
-    into new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    include '**/**'
-  }
-  
-  copy {
-    from new File(autoFvtDir, "publish/servers/${serverName}/imports")
-    into new File(autoFvtDir, 'lib/LibertyFATTestFiles/serversettings/SAMLServerFiles')
-    include '**/*.orig'
-  }
-
-}
+addRequiredLibraries.dependsOn copyShibKeys, copySamlFatServer1
