--- a/dev/io.openliberty.io.netty/.project
+++ b/dev/io.openliberty.io.netty/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.openliberty.netty.internal</name>
+	<name>io.openliberty.io.netty</name>
 	<comment></comment>
 	<projects>
 	</projects>
