--- a/dev/com.ibm.ws.concurrent.mp.1.2_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.concurrent.mp.1.2_fat_tck/publish/tckRunner/tck/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <!-- Use the following to test a release (1.2) or release candidate (1.2-RC1) -->
-        <microprofile.context.propagation.version>1.2-RC1</microprofile.context.propagation.version>
+        <microprofile.context.propagation.version>1.2</microprofile.context.propagation.version>
 
         <!-- Use the following to test a local snaphost (1.2-SNAPSHOT) -->
         <!-- The test case launch must be guarded with "if (FATRunner.FAT_TEST_LOCALRUN)" of this option is delivered. -->
@@ -60,6 +60,9 @@
             <groupId>org.eclipse.microprofile.context-propagation</groupId>
             <artifactId>microprofile-context-propagation-tck</artifactId>
             <version>${microprofile.context.propagation.version}</version>
+            <!-- TODO remove next 2 lines once 1.2 final release is on Maven -->
+            <scope>system</scope>
+            <systemPath>${org.eclipse.microprofile.contextpropagationtck.1.2_}</systemPath>
         </dependency>
 
         <dependency>
