--- a/dev/wlp-gradle/subprojects/fat.gradle
+++ b/dev/wlp-gradle/subprojects/fat.gradle
@@ -65,7 +65,7 @@ dependencies {
        "org.testcontainers:postgresql:${testcontainersVersion}",
        "org.testcontainers:db2:${testcontainersVersion}"
 
-  jakartaTransformer 'biz.aQute.bnd:biz.aQute.bnd.transform:5.1.1',
+  jakartaTransformer 'biz.aQute.bnd:biz.aQute.bnd.transform:5.2.0',
        'commons-cli:commons-cli:1.4',
        'org.slf4j:slf4j-simple:1.7.30',
        'org.slf4j:slf4j-api:1.7.26',
@@ -140,7 +140,8 @@ task copyDatabaseRotationDrivers(type: Copy) {
 }
 
 task copyFeatureBundles {
-  mustRunAfter assemble
+  dependsOn assemble
+  dependsOn parent.subprojects.assemble
   enabled project.file('test-bundles').exists()
   doLast {
     new File(project.buildDir, 'buildfiles').eachLine { String line ->
