--- a/dev/com.ibm.ws.security.saml.sso_fat.logout.httpServletRequest/gradle.properties
+++ b/dev/com.ibm.ws.security.saml.sso_fat.logout.httpServletRequest/gradle.properties
@@ -1,4 +1,4 @@
 serverName1=com.ibm.ws.security.saml.sso_fat.logout
-serverName2=com.ibm.ws.security.saml.sso_fat.logout.2
+serverName2=com.ibm.ws.security.saml.sso_fat.logout.server2
 httpServletReuqestAppWar=true
 shareLogoutServers=true
