--- a/dev/com.ibm.ws.security.saml.sso_fat.logout/gradle.properties
+++ b/dev/com.ibm.ws.security.saml.sso_fat.logout/gradle.properties
@@ -1,3 +1,3 @@
 serverName1=com.ibm.ws.security.saml.sso_fat.logout
-serverName2=com.ibm.ws.security.saml.sso_fat.logout.2
+serverName2=com.ibm.ws.security.saml.sso_fat.logout.server2
 httpServletReuqestAppWar=true
