--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -1519,7 +1519,7 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-el-api</artifactId>
-      <version>10.0.0-M7</version>
+      <version>10.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
