--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -1524,7 +1524,7 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat-jasper-el</artifactId>
-      <version>10.0.0-M7</version>
+      <version>10.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.wink</groupId>
