--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat/build.gradle
@@ -136,7 +136,8 @@ autoFVT.doLast {
     'com.ibm.ws.security.wim.adapter.ldap.fat.racf.sdbm',
     'com.ibm.ws.security.wim.adapter.ldap.fat.return.to.primary',
     'com.ibm.ws.security.wim.adapter.ldap.fat.racf.sdbm.basic',
-    'com.ibm.ws.security.wim.adapter.ldap.fat.jndi.output'
+    'com.ibm.ws.security.wim.adapter.ldap.fat.jndi.output',
+    'com.ibm.ws.security.wim.adapter.ldap.fat.rdn'
   ]
   servers.each { server ->
     copy { 
