Add FAT tests for MP Config introspectors

--- a/dev/com.ibm.ws.microprofile.config.1.1_fat/publish/servers/CDIConfigServer/server.env
+++ b/dev/com.ibm.ws.microprofile.config.1.1_fat/publish/servers/CDIConfigServer/server.env
@@ -34,3 +34,4 @@ server_env_property=server.env.value
 server_env_property_override=server.env.o.value
 server_env_property_override2=server.env.o.value2
 pEnv=ev
+introspectorTest=env
