--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -63,6 +63,8 @@ com.ibm.ws.jca.resourceAdapter.properties.xml=jakarta-resource.properties
 com.ibm.ws.jca17.processor.service.ConnectionFactoryResourceBuilder.xml=jakarta-resource.properties
 com.ibm.ws.jca.processor.jms.service.JMSConnectionFactoryResourceBuilder.xml=jakarta-resource.properties
 com.ibm.ws.jca.processor.jms.service.JMSDestinationResourceFactoryBuilder.xml=jakarta-resource.properties
+# Pages
+com.ibm.ws.jsp.v23.dd.xml=jakarta-jspVersion.properties
 #Faces
 com.ibm.ws.myfaces.initializer.xml=jakarta-faces-initialization.properties
 com.ibm.ws.org.apache.myfaces_3_0_1_0.ResourceProvider.xml=jakarta-faces-initialization.properties
