--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -23,6 +23,7 @@ on:
 env:
   LANG: en_US.UTF-8
 jobs:
+
   validate: #Perform validation before any other jobs run.  If we fail validation, don't run anything else.
     name: Validation
     runs-on: ubuntu-18.04
@@ -41,6 +42,7 @@ jobs:
       run: .github/workflow-scripts/validate-copyright-headers.sh
     - name: Validate tests
       run: .github/workflow-scripts/validate-tests.sh
+
   build: #Main build always done on linix run in parallel to setup and unit-test
     name: Build Open Liberty
     needs: validate
@@ -91,13 +93,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Build with Gradle
-      run: |
-        cd dev
-        chmod +x gradlew
-        echo "::group::Building Liberty.  This will take approx. 30 minutes"
-        ./gradlew cnf:initialize assemble
-        echo "::endgroup::"
-        cd .. && zip -rq openliberty-image.zip dev/build.image/wlp/
+      run: .github/workflow-scripts/build.sh
     - name: Upload liberty image
       uses: actions/upload-artifact@v2
       with:
@@ -113,6 +109,14 @@ jobs:
         path: |
           .github/test-categories/MODIFIED_LITE_MODE
           .github/test-categories/MODIFIED_FULL_MODE*
+    - name: Upload failure output
+      if: failure()
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-failure-gradle.log
+        if-no-files-found: error
+        path: dev/tmp/gradle.log
+
   unit_tests: #Unit tests always run linux and java 11
     name: Unit Tests
     needs: validate
@@ -170,6 +174,7 @@ jobs:
         path: "dev/unit-results/TEST-*.xml"
         includeSummary: true
         numFailures: 100 # Truncate number of failures so we don't run out of annoations.
+        
   fat_tests: #Runs parallel jobs for each FAT category. JDK version and OS are dependent on setup
     name: FAT Tests - ${{matrix.category}}
     needs: [validate, build]
@@ -238,7 +243,7 @@ jobs:
       shell: bash
       env:
         CATEGORY: ${{matrix.category}}
-      run: .github/workflow-scripts/check-fat-failures.sh
+      run: .github/workflow-scripts/validate-fat-failures.sh
     - name: Upload failing FAT artifacts
       if: steps.check-fat-failure.outputs.status == 'failure'
       uses: aguibert/upload-artifact@v1.0
