--- a/dev/com.ibm.ws.security.mp.jwt.1.1_fat/build.gradle
+++ b/dev/com.ibm.ws.security.mp.jwt.1.1_fat/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 }
 */
 
+addRequiredLibraries.dependsOn ':com.ibm.ws.security.fat.common.mp.jwt:autoFVT'
+
  def servers = [
 	'com.ibm.ws.security.mp.jwt.1.1.fat',
 	'com.ibm.ws.security.mp.jwt.1.1.fat.jvmOptions',
