--- a/dev/gradle.properties
+++ b/dev/gradle.properties
@@ -38,7 +38,7 @@ org.gradle.jvmargs=-Xmx2560M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF
 # Fix for the TLS protocol version used to communicate with Maven Central when using the IBM JVM.
 systemProp.com.ibm.jsse2.overrideDefaultTLS=true
 
-org.gradle.parallel=true
+# When the build cache is enabled, it will store build outputs in the Gradle user home.
 org.gradle.caching=true
 
 # Tweaks to better handle Artifactory connection flakiness.
