--- a/dev/wlp-gradle/bndSettings.gradle
+++ b/dev/wlp-gradle/bndSettings.gradle
@@ -157,9 +157,8 @@ projectNames.each { projectName ->
     }
 }
 
-if (allBndProjects.contains('com.ibm.ws.springboot.support.version20.test.war.app')) {
-    include ':com.ibm.ws.springboot.support.version20.test.war.app:module'
-}
+// A non-standared project. Just include it all the time
+include ':com.ibm.ws.springboot.support.version20.test.war.app:module'
 
 private boolean parseBoolean(String value) {
     return 'on'.equalsIgnoreCase(value) || 'true'.equalsIgnoreCase(value)
