--- a/dev/wlp-gradle/subprojects/fat.gradle
+++ b/dev/wlp-gradle/subprojects/fat.gradle
@@ -140,7 +140,7 @@ task copyDatabaseRotationDrivers(type: Copy) {
 }
 
 task copyFeatureBundles {
-  dependsOn assemble
+  mustRunAfter assemble
   enabled project.file('test-bundles').exists()
   doLast {
     new File(project.buildDir, 'buildfiles').eachLine { String line ->
