Move and rename packages

--- a/dev/com.ibm.ws.cdi.api_fat/test-applications/appConversationFilter.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.cdi.api_fat/test-applications/appConversationFilter.war/resources/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	<display-name>appConversationFilter</display-name>
 	<filter>
 		<filter-name>FirstFilter</filter-name> 
-		<filter-class>test.conversation.filter.FirstFilter</filter-class> 
+		<filter-class>com.ibm.ws.cdi.api.fat.apps.conversationfilter.FirstFilter</filter-class> 
 	</filter>
 	<filter-mapping>
 	  <filter-name>FirstFilter</filter-name> 
